--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -3,11 +3,132 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f1f13f35",
+   "id": "64d789b8",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import fsemu\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "fea52e0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "circ = [('H',(0,)), ('CNOT', (0,1)), ('CNOT', (0,2)), ('CNOT', (0,3))]\n",
+    "final  = fsemu.simulate(4, circ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b21a1e2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'0000': np.float64(0.4999999999999999),\n",
+       " '0001': np.float64(0.0),\n",
+       " '0010': np.float64(0.0),\n",
+       " '0011': np.float64(0.0),\n",
+       " '0100': np.float64(0.0),\n",
+       " '0101': np.float64(0.0),\n",
+       " '0110': np.float64(0.0),\n",
+       " '0111': np.float64(0.0),\n",
+       " '1000': np.float64(0.0),\n",
+       " '1001': np.float64(0.0),\n",
+       " '1010': np.float64(0.0),\n",
+       " '1011': np.float64(0.0),\n",
+       " '1100': np.float64(0.0),\n",
+       " '1101': np.float64(0.0),\n",
+       " '1110': np.float64(0.0),\n",
+       " '1111': np.float64(0.4999999999999999)}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fsemu.get_probabilities(final)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4916532f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zerostate = fsemu.init_state(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f1f13f35",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.9999999999999998)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fsemu.expectation_value(final, [('Z', (0,)), ('Z', (3,))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3795574c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.9999999999999998)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fsemu.get_zcorrelator(final, 0,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e4ae1fbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 0, 0, 0)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fsemu.sample_state(final)"
    ]
   },
   {
@@ -35,90 +156,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "213b0296",
+   "execution_count": 12,
+   "id": "f3bab4c5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def apply_1q_gate_simples(state, gate):\n",
-    "    state = np.asarray(state)\n",
-    "    gate = np.asarray(gate)\n",
-    "    new_state = np.empty_like(state)\n",
-    "    \n",
-    "    idim, jdim, kdim, ldim = state.shape\n",
-    "    for i in range(idim):\n",
-    "        for j in range(jdim):\n",
-    "            for k in range(kdim):\n",
-    "                for l in range(ldim):\n",
-    "                    new_state[i, j, k, l] = state[i, j, k, :] @ gate[:, l]    \n",
-    "    "
+    "test1 = np.array([[[1,1],[1,1]],[[1,1],[1,1]]])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7d239e74",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def apply_1q_gate_simple(state, gate):\n",
-    "    state = np.asarray(state)\n",
-    "    gate = np.asarray(gate)\n",
-    "    new_state = np.empty_like(state)\n",
-    "    \n",
-    "    for ijkl in np.ndindex(*state.shape):\n",
-    "        *ijk, l = ijkl\n",
-    "        new_state[ijkl] = state[*ijk, :] @ gate[:, l]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70fafb0b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def apply_gate(state, targets, gate):\n",
-    "    state = np.asarray(state)\n",
-    "    gate = np.asarray(gate)\n",
-    "    \n",
-    "    n = state.ndim\n",
-    "    m = len(targets)\n",
-    "    \n",
-    "    state = np.tensordot(state, gate, (targets, np.arange(m)))\n",
-    "                         \n",
-    "    return np.moveaxis(state, np.arange(n-m,n), targets)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "40368f8a",
+   "execution_count": 13,
+   "id": "3a1bd545",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello\n",
-      "World\n",
-      "from\n",
-      "Python\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(2, 2, 2)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "statevector([\"Hello\", \"World\", \"from\", \"Python\"])"
+    "test1.shape"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13cf5bc7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
