--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "6f4c82e0",
    "metadata": {},
    "outputs": [],
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "1eaac008",
    "metadata": {},
    "outputs": [],
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "e31aab1e",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,62 @@
        "         [0.]]])]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zerostate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "580cb01c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "tuple index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mIndexError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m zerostate = \u001b[43mmps\u001b[49m\u001b[43m.\u001b[49m\u001b[43mapply_1q_gate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mzerostate\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mH\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      2\u001b[39m \u001b[38;5;28mprint\u001b[39m(zerostate)\n\u001b[32m      3\u001b[39m zerostate = mps.apply_2q_gate_nn(zerostate, (\u001b[32m0\u001b[39m,\u001b[32m1\u001b[39m), \u001b[33m'\u001b[39m\u001b[33mCNOT\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Administrator\\Documents\\Coding\\Uni\\JSS34\\JSS25-NANO1\\mps.py:61\u001b[39m, in \u001b[36mapply_1q_gate\u001b[39m\u001b[34m(mps, target, gate)\u001b[39m\n\u001b[32m     60\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mapply_1q_gate\u001b[39m(mps, target, gate):\n\u001b[32m---> \u001b[39m\u001b[32m61\u001b[39m     mps[target] = \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mtensordot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmps\u001b[49m\u001b[43m[\u001b[49m\u001b[43mtarget\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgate\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxes\u001b[49m\u001b[43m=\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     62\u001b[39m     mps[target] = np.moveaxis(mps[target], \u001b[32m2\u001b[39m, \u001b[32m1\u001b[39m)\n\u001b[32m     63\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m mps\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Administrator\\Documents\\Coding\\Uni\\JSS34\\JSS25-NANO1\\.venv\\Lib\\site-packages\\numpy\\_core\\numeric.py:1185\u001b[39m, in \u001b[36mtensordot\u001b[39m\u001b[34m(a, b, axes)\u001b[39m\n\u001b[32m   1183\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m   1184\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(na):\n\u001b[32m-> \u001b[39m\u001b[32m1185\u001b[39m         \u001b[38;5;28;01mif\u001b[39;00m as_[axes_a[k]] != \u001b[43mbs\u001b[49m\u001b[43m[\u001b[49m\u001b[43maxes_b\u001b[49m\u001b[43m[\u001b[49m\u001b[43mk\u001b[49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m:\n\u001b[32m   1186\u001b[39m             equal = \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[32m   1187\u001b[39m             \u001b[38;5;28;01mbreak\u001b[39;00m\n",
+      "\u001b[31mIndexError\u001b[39m: tuple index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "zerostate = mps.apply_1q_gate(zerostate, (0,), 'H')\n",
+    "print(zerostate)\n",
+    "zerostate = mps.apply_2q_gate_nn(zerostate, (0,1), 'CNOT')\n",
+    "print(zerostate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a54f3103",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([[[1.],\n",
+       "         [0.]]]),\n",
+       " array([[[1.],\n",
+       "         [0.]]]),\n",
+       " array([[[1.],\n",
+       "         [0.]]]),\n",
+       " array([[[1.],\n",
+       "         [0.]]])]"
+      ]
+     },
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
